# phakel-os

./: Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.zed/: settings.json
src/: config.rs  console.rs  errors.rs  lang_items.rs  logger.rs  logo.txt  main.rs  print.rs  sbi.rs  symbols.rs
src/arch/: mod.rs
src/arch/riscv/: mod.rs  uart.rs
src/arch/riscv/qemu/: layout.rs
src/arch/riscv/sbi/: mod.rs
src/driver/: uart.rs
src/memory/: address.rs  kalloc.rs
src/memory/mapping/: page_table.rs  page_table_entry.rs
src/mm/: address.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
