[package]
name = "phakel-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
log = "0.4.21"
lazy_static = { version = "1.4.0", features = ["spin_no_std"]  }