[package]
name = "phakel-os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.11.1"
sbi-rt = { version = "0.0.3", features = ["legacy"] }
log = "0.4.21"
lazy_static = { version = "1.4.0", features = ["spin_no_std"]  }
buddy_system_allocator = "0.9.1"
bitflags = "2.5.0"
xmas-elf = "0.9.1"
thiserror-no-std = "2.0.2"
spin = "0.9.8"